--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         // You can also override any defaults you need here:
         //
-        // defaults['host'] = 'vnc.example.com';
+         defaults['host'] = 'novnc.qikhost.workers.dev';
 
         // Or force a specific setting, preventing the user from
         // changing it:
