Update host setting to include port 443

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         // You can also override any defaults you need here:
         //
-         defaults['host'] = 'novnc.qikhost.workers.dev';
+         defaults['host'] = 'novnc.qikhost.workers.dev:443';
 
         // Or force a specific setting, preventing the user from
         // changing it:
